# ElecSys

./: README.en.md  README.md
ElecSystem/: CMakeLists.txt  Employee.cpp  Employee.h  Employee.ui  analysetable.cpp  analysetable.h  analysetableforemployee.cpp  analysetableforemployee.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.cpp  manager.h  manager.ui  meminfo.cpp  meminfo.h  memsql.cpp  memsql.h  staff.cpp  staff.h  staff.ui  staticResource.qrc  superadmin.cpp  superadmin.h  superadmin.ui  userinfo.cpp  userinfo.h
